--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -4,7 +4,7 @@
     background-color: black;
     color: white;
     padding: 36px;
-    gap: 36px;
+    gap: 16px;
     
 }
 
@@ -17,22 +17,51 @@
     margin-left: 50%;
 } */
 
+h1{
+    margin-top: -50px;
+
+}
+
 img{
     /* text-align: center; */
-    width: 5%;
+    width: 3%;
     float: right;
     left: 50px;
-    top: 20px;
-    margin-left: 30%;
+    margin-top: -60px;
+    margin-left: 10%;
 }
+
 
 .nav-buttons{
     display: flex;
     gap: 20px;  
-    padding-top: 20px; 
+    padding-top: 70px; 
     padding-bottom: 20px;
-    margin-right: 20px;  
     flex: 1;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    margin-left: 10%;
+    
 }
+
+.nav-button{
+    background: none;
+    border: none;
+    color: white;
+    font-size: 16pt;
+    padding: 5px 10px; 
+    bottom: 20px;
+    gap: 16px;
+   
+
+}
+
+.nav-button:hover{
+    color: blue;
+    border-radius: 0.25em;
+    cursor: pointer;
+}
+
+
+
+
 
