--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -2,7 +2,7 @@
 
     background-image: url("https://cdn.pixabay.com/photo/2018/08/23/07/35/thunderstorm-3625405_640.jpg");
     background-size: cover;
-    width: 1920px;
+    width: 1950px;
     height: 500px;
 }
 
@@ -14,8 +14,9 @@
 .box .rectangle {
     background-color: #000000;
     height: 230px;
-    left: 35%;
-    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
     top: 30%;
     width: 570px;
 
