--- a/src/views/Register.css
+++ b/src/views/Register.css
@@ -1,7 +1,10 @@
 
-body{
+.register{
     background-color: #344a72;
     font-family: "Roboto", sans-serif;
+    background-size: cover;
+    padding: 32px;
+
 }
 
 p3{
@@ -19,24 +22,25 @@ p3{
 h2{
     text-align: center;
     padding-top: 15px;
+    margin: 0;
 }
 
 h4{
     text-align: center;
 }
 
-form{
+.register-form{
     width: 300px;
     margin-left: 20px;
 }
 
-form label{
+.register-form label{
     display: flex;
     margin-top: 20px;
     font-size: 18px;
 }
 
-form input{
+.register-form input{
     width: 100%;
     padding: 7px;
     border: none;
@@ -44,3 +48,13 @@ form input{
     border-radius: 6px;
     outline: none;
 }
+
+input [type="button"]{
+    width: 320px;
+    height: 35px;
+    /* margin-top: 20px; */
+    border: none;
+
+
+}
+
