--- a/src/views/Login.css
+++ b/src/views/Login.css
@@ -40,20 +40,17 @@ h3{
     outline: none;
 }
 
-input [type="button"]{
-    width: 320px;
-    height: 35px;
-    margin-top: 20px; 
-    border: none;
-    font-size: 18px;
-
+.Login-form .login-btn{
+    width: 70%;
+    padding: 7px;
+    margin-top: 15px;
 }
 
 .para{
     text-align: center;
     color: black;
     font-size: 15px;
-    margin-top: -10px;
+    margin-top: 20px;
 }
 
 
