--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.container{
+  display: flex;
+  padding: 25px;
+
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
