--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -56,3 +56,28 @@
 
 } 
 
+.weather-data{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.city{
+    font-size: 30px;
+    font-weight: 200;
+}
+
+.temp{
+    font-size: 90px;
+    padding: 10px;
+    border: 1px solid grey;
+    border-radius: 12px;
+}
+
+.weather{
+    font-size: 30px;
+    font-weight: 200;
+    
+}
+
