--- a/src/views/Airquality.css
+++ b/src/views/Airquality.css
@@ -9,8 +9,18 @@
     width: 360px;
     height: 275px;
     margin: auto;
-    background-color: white;
+    background-color: black;
     border-radius: 3px;
     margin-top: 5%;
-    color: black;
+    color: white;
+}
+
+input{
+
+    border: 0;
+    border-radius: 2px;
+    padding: 15px;
+    width: 300px;
+    height: 30px;
+    padding: 15px;
 }
